@@ -39,7 +39,6 @@ import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.UUID;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.BDDMockito.given;
@@ -85,9 +84,11 @@ class NetworkMapControllerTest {
     @Autowired
     private ObjectMapper objectMapper;
 
+    private Network network;
+
     @BeforeEach
     void setUp() {
-        Network network = EurostagTutorialExample1Factory.createWithMoreGenerators(new NetworkFactoryImpl());
+        network = EurostagTutorialExample1Factory.createWithMoreGenerators(new NetworkFactoryImpl());
         Line l2 = network.getLine("NHV1_NHV2_2");
         l2.newCurrentLimits1().setPermanentLimit(Double.NaN).add();
         l2.newCurrentLimits2().setPermanentLimit(Double.NaN).add();
@@ -558,7 +559,7 @@ class NetworkMapControllerTest {
                 .withRedundantV(true)
                 .add();
 
-        vlgen3.newDanglingLine()
+        DanglingLine dl2 = vlgen3.newDanglingLine()
                 .setId("DL2")
                 .setName("DL2")
                 .setR(1)
@@ -571,6 +572,8 @@ class NetworkMapControllerTest {
                 .setConnectableBus("NGEN3")
                 .setBus("NGEN3")
                 .add();
+        dl2.getTerminal().setP(45);
+        dl2.getTerminal().setQ(75);
         network.newTieLine()
                 .setId("TL1")
                 .setName("TL1")
@@ -1304,7 +1307,7 @@ class NetworkMapControllerTest {
         if (nominalVoltages != null && !nominalVoltages.isEmpty()) {
             List<String> nominalVoltageStrings = nominalVoltages.stream()
                     .map(String::valueOf)
-                    .collect(Collectors.toList());
+                    .toList();
             queryParams.addAll(QUERY_PARAM_NOMINAL_VOLTAGES, nominalVoltageStrings);
         }
         MvcResult mvcResult = mvc.perform(post("/v1/networks/{networkUuid}/elements", networkUuid)
@@ -1331,7 +1334,7 @@ class NetworkMapControllerTest {
         if (nominalVoltages != null && !nominalVoltages.isEmpty()) {
             List<String> nominalVoltageStrings = nominalVoltages.stream()
                     .map(String::valueOf)
-                    .collect(Collectors.toList());
+                    .toList();
             queryParams.addAll(QUERY_PARAM_NOMINAL_VOLTAGES, nominalVoltageStrings);
         }
 
@@ -1350,7 +1353,7 @@ class NetworkMapControllerTest {
         if (nominalVoltages != null && !nominalVoltages.isEmpty()) {
             List<String> nominalVoltageStrings = nominalVoltages.stream()
                     .map(String::valueOf)
-                    .collect(Collectors.toList());
+                    .toList();
             queryParams.addAll(QUERY_PARAM_NOMINAL_VOLTAGES, nominalVoltageStrings);
         }
         MvcResult mvcResult = mvc.perform(post("/v1/networks/{networkUuid}/elements-ids", networkUuid)
@@ -1369,7 +1372,7 @@ class NetworkMapControllerTest {
         if (nominalVoltages != null && !nominalVoltages.isEmpty()) {
             List<String> nominalVoltageStrings = nominalVoltages.stream()
                     .map(String::valueOf)
-                    .collect(Collectors.toList());
+                    .toList();
             queryParams.addAll(QUERY_PARAM_NOMINAL_VOLTAGES, nominalVoltageStrings);
         }
         mvc.perform(post("/v1/networks/{networkUuid}/elements-ids", networkUuid)
@@ -1958,8 +1961,11 @@ class NetworkMapControllerTest {
 
     @Test
     void shouldReturnHvdcLinesTabData() throws Exception {
+        network.getHvdcLine("HVDC1").getConverterStation1().getTerminal().getBusView().getBus().setV(27.);
+        network.getHvdcLine("HVDC1").getConverterStation2().getTerminal().getBusView().getBus().setV(27.); // to get a calculated i1/i2
         succeedingTestForElementsInfos(NETWORK_UUID, null, ElementType.HVDC_LINE, InfoType.TAB, null, resourceToString("/hvdc-lines-tab-data.json"));
-        succeedingTestForElementsInfos(NETWORK_UUID, VARIANT_ID, ElementType.HVDC_LINE, InfoType.TAB, null, resourceToString("/hvdc-lines-tab-data.json"));
+        // Rq: calculated i1/i2 not present in VARIANT_ID
+        succeedingTestForElementsInfos(NETWORK_UUID, VARIANT_ID, ElementType.HVDC_LINE, InfoType.TAB, null, resourceToString("/hvdc-lines-variant-tab-data.json"));
     }
 
     @Test
@@ -2279,8 +2285,10 @@ class NetworkMapControllerTest {
 
     @Test
     void shouldReturnDanglingLineTabData() throws Exception {
+        network.getDanglingLine("DL1").getTerminal().getBusView().getBus().setV(27.); // to get a calculated I
         succeedingTestForElementsInfos(NETWORK_UUID, null, ElementType.DANGLING_LINE, InfoType.TAB, null, resourceToString("/dangling-lines-tab-data.json"));
-        succeedingTestForElementsInfos(NETWORK_UUID, VARIANT_ID, ElementType.DANGLING_LINE, InfoType.TAB, null, resourceToString("/dangling-lines-tab-data.json"));
+        // Rq: calculated I not present in VARIANT_ID
+        succeedingTestForElementsInfos(NETWORK_UUID, VARIANT_ID, ElementType.DANGLING_LINE, InfoType.TAB, null, resourceToString("/dangling-lines-variant-tab-data.json"));
     }
 
     @Test
@@ -2367,5 +2375,6 @@ class NetworkMapControllerTest {
     void shouldReturnTieLinesTabData() throws Exception {
         succeedingTestForElementsInfos(NETWORK_UUID, null, ElementType.TIE_LINE, InfoType.TAB, null, resourceToString("/tie-lines-tab-data.json"));
         succeedingTestForElementsInfos(NETWORK_UUID, VARIANT_ID, ElementType.TIE_LINE, InfoType.TAB, null, resourceToString("/tie-lines-tab-data.json"));
+        succeedingTestForElementInfosInDc(NETWORK_UUID, VARIANT_ID, ElementType.TIE_LINE, InfoType.TAB, "TL1", 0.80, resourceToString("/tie-line-tab-data-dc.json"));
     }
 }
